tests/algorithms/x/Java/physics/ideal_gas_law.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden773_ideal_gas_law935891190/001/Main.java:6: error: not a statement
            throw_;
            ^
/tmp/TestJavaTranspiler_Algorithms_Golden773_ideal_gas_law935891190/001/Main.java:7: error: not a statement
            "Invalid inputs. Enter positive value.";
            ^
/tmp/TestJavaTranspiler_Algorithms_Golden773_ideal_gas_law935891190/001/Main.java:14: error: not a statement
            throw_;
            ^
/tmp/TestJavaTranspiler_Algorithms_Golden773_ideal_gas_law935891190/001/Main.java:15: error: not a statement
            "Invalid inputs. Enter positive value.";
            ^
/tmp/TestJavaTranspiler_Algorithms_Golden773_ideal_gas_law935891190/001/Main.java:22: error: not a statement
            throw_;
            ^
/tmp/TestJavaTranspiler_Algorithms_Golden773_ideal_gas_law935891190/001/Main.java:23: error: not a statement
            "Invalid inputs. Enter positive value.";
            ^
/tmp/TestJavaTranspiler_Algorithms_Golden773_ideal_gas_law935891190/001/Main.java:30: error: not a statement
            throw_;
            ^
/tmp/TestJavaTranspiler_Algorithms_Golden773_ideal_gas_law935891190/001/Main.java:31: error: not a statement
            "Invalid inputs. Enter positive value.";
            ^
8 errors
